perf(#6174): fold a constant-false filter and LIMIT 0 at plan time instead of scanning the target (#6181)
* perf(#6174): fold a constant-false filter and LIMIT 0 at plan time instead of scanning the target

The SQL planner had no notion of a filter that is false for every row, so a schema probe -
`SELECT * FROM (SELECT name FROM Character) SPARK_GEN_SUBQ_0 WHERE 1=0`, which is what Spark and
several BI tools send over the Postgres wire to discover a query's columns - scanned the whole
target, evaluated `1=0` once per record and discarded all of them. `LIMIT 0` is the other spelling
of the same intent and cost the same.

The recognition now lives on the AST, next to the `isAlwaysTrue()` that was already there:
`BooleanExpression.isAlwaysFalse(CommandContext)` defaults to false and is overridden structurally
by AndBlock (false when any term is), OrBlock (false only when every alternative is),
ParenthesisBlock and BinaryCondition. A comparison is folded only when both operands are literals
(`Expression.isLiteral()`), and it is folded by calling the very same `evaluate()` the filter step
would have called, so the fold and the runtime cannot disagree. A bound parameter is excluded
because the plan outlives the execution that bound it; a function call is excluded because nothing
on SQLFunction marks a function as pure. `Limit.isAlwaysEmpty()` covers a literal `LIMIT 0`.

SelectExecutionPlanner reads that off the clauses as the statement wrote them, before optimizeQuery()
rearranges them into index searches, and - after the target has been planned, so a missing type is
still reported - drops the fetch steps and chains an EmptySourceStep in their place. Everything
downstream of the fetch stays and receives no row, which is exactly what it receives today from the
filter being removed: `SELECT count(*) FROM T WHERE 1=0` still returns its one row with 0, and with a
GROUP BY still returns none. A LET evaluated once per statement is chained ahead of the empty source
and still ru